添加消息模块和sse链接
